--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,8 +1,11 @@
 body {
-    background-color: lightblue;
+    background: lightblue;
+    font-family: Arial, Helvetica, sans-serif;
     }
     
     h1 {
-    color: navy;
-    margin-left: 20px;
+    border: solid 1px white;
+    border-radius: 4px;    
+    color: rgb(0, 0, 143);
+    text-align: center;
     }
